Fix offers-text alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -993,6 +993,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 0px 3px;
 }
 .offers-section__offer-text {
   font-size: 30px;
