--- a/sass/layout/_offers-section.scss
+++ b/sass/layout/_offers-section.scss
@@ -67,6 +67,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 0px 3px;
   }
 
   &__offer-text {
